--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -239,7 +239,7 @@
 			        <li><a href="#">Temperature</a>
 			        <ul>
 				        <li><a href="#">Text info</a></li>
-				        <li><a href="#">Statistics</a></li>
+				        <li><a href="#">Graphics</a></li>
 			        </ul>
 			        </li>
 			        <li><a href="#">Home</a>
