Another label fixed

--- a/app/Resources/views/Pages/home.html.twig
+++ b/app/Resources/views/Pages/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-Nothing to do here. Lol.
+Not implemented
 {% endblock %}
 
 {% block stylesheets %}
