--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,14 +6,14 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
         <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
         <title>{% block title %}Home Control{% endblock %}</title>
         <style>
             body {
 	            margin:0;
 	            padding:0;
 	            background:#fff;
-	            font-family:'Montserrat',sans-serif;
+	            font-family:'Raleway', sans-serif;
 	            font-size:12px;
             }
             ul {
@@ -50,7 +50,7 @@
 	            -moz-transition:all .2s linear 0s;
 	            -webkit-transition:all .2s linear 0s;
 	            -o-transition:all .2s linear 0s;
-	            font-size:16px;
+	            font-size:18px;
             }
             nav ul li a:hover {
 	            color: #34B484;
@@ -114,7 +114,7 @@
 	            padding:150px 0px 100px;
             }
             .wrap ul.wrap-nav li {
-	            font-size:20px;
+	            font-size:26px;
 	            display:inline-block;
 	            vertical-align:top;
 	            width:24%;
@@ -138,7 +138,7 @@
             }
             .wrap ul.wrap-nav ul li {
 	            display:block;
-	            font-size:13px;
+	            font-size:18px;
 	            width:100%;
 	            color:#e9e9e9;
             }
