--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -70,11 +70,12 @@
             .btn-open:after {
 	            color:#333;
 	            content:"\f0c9";
+				font-size:21px;
 	            font-family:"FontAwesome";
-	            transition-property:all .2s linear 0s;
-	            -moz-transition:all .2s linear 0s;
-	            -webkit-transition:all .2s linear 0s;
-	            -o-transition:all .2s linear 0s;
+	            transition-property:all .1s linear 0s;
+	            -moz-transition:all .1s linear 0s;
+	            -webkit-transition:all .1s linear 0s;
+	            -o-transition:all .1s linear 0s;
             }
             .btn-open:hover:after {
 	            color:#34B484;
@@ -82,11 +83,13 @@
             .btn-close:after {
 	            color:#fff;
 	            content:"\f00d";
+                
+                font-size:21px;
 	            font-family:"FontAwesome";
-	            transition-property:all .2s linear 0s;
-	            -moz-transition:all .2s linear 0s;
-	            -webkit-transition:all .2s linear 0s;
-	            -o-transition:all .2s linear 0s;
+	            transition-property:all .1s linear 0s;
+	            -moz-transition:all .1s linear 0s;
+	            -webkit-transition:all .1s linear 0s;
+	            -o-transition:all .1s linear 0s;
             }
             .btn-close:hover:after {
 	            color: #34B484;
