--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -228,9 +228,11 @@
     <body>
         <nav>
             <ul>
-	            <li><a href="#">Temperature</a></li>
-	            <li><a href="#">Home</a></li>
-	            <li><a href="#">Water</a></li>
+				<li><a href="/">Home</a></li>
+                <li><a href="/controls">Controls</a></li>
+				<li><a href="/info/power">Power</a></li>
+	            <li><a href="/info/temperature">Temperature</a></li>
+	            <li><a href="/info/water">Water</a></li>
             </ul>
             <div class="button">
 	            <a class="btn-open" href="#"></a>
@@ -239,22 +241,21 @@
         <div class="overlay">
 	        <div class="wrap">
 		        <ul class="wrap-nav">
-			        <li><a href="#">Temperature</a>
-			        <ul>
-				        <li><a href="#">Text info</a></li>
-				        <li><a href="#">Graphics</a></li>
-			        </ul>
-			        </li>
-			        <li><a href="#">Home</a>
-			        <ul>
-				    </ul>
-			        </li>
-			        <li><a href="#">Water</a>
-			        <ul>
-				        <li><a href="#">Text info</a></li>
-				        <li><a href="#">Graphics</a></li>
-			        </ul>
-			        </li>
+					<li><a href="/">Home</a>
+						<ul>
+						</ul>
+					</li>
+                    <li><a href="/controls">Controls</a>
+                        <ul>
+                        </ul>
+                    </li>
+					<li><a href="/info">Info</a>
+						<ul>
+							<li><a href="/info/power">Power</a></li>
+							<li><a href="/info/temperature">Temperature</a></li>
+                            <li><a href="/info/water">Water</a></li>
+						</ul>
+					</li>
                     <br><br><br><br><br><br><br><br><br><br><br><br>
                 </ul>
                 <p>
