--- a/src/WebViewsBundle/Resources/views/Pages/home.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/home.html.twig
@@ -1,7 +1,11 @@
 {% extends 'WebViewsBundle:Pages:base.html.twig' %}
 
 {% block body %}
-Not implemented
+    <p>Not implemented</p>
+{% endblock %}
+
+{% block menu_title %}
+Home
 {% endblock %}
 
 {% block stylesheets %}
