--- a/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
@@ -60,7 +60,9 @@
 
                         var name_container =    document.createElement('h3');
                         var chart_bt =          document.createElement('button');
-                        chart_bt.className = "chart_button";
+                        chart_bt.className =    "chart_button";
+                        chart_bt.id =           controller;
+                        chart_bt.onclick =      showChart;
 
                         var name_text =         document.createTextNode(controller);
                         var chart_bt_text =     document.createTextNode('Show chart');
@@ -145,6 +147,23 @@
 
         setInterval(updateTemperatures, 15000);
 
+
+
+
+        // Okay. Charts. Let's start!
+
+
+        function showChart() {
+            var request = new XMLHttpRequest();
+            request.onreadystatechange = function() {
+                if(request.readyState == 4 && request.status == 200) {
+                    console.log(request.responseText);
+                }
+            };
+            request.open('GET', '/api/temperatures/controller/'+this.id);
+            request.send();
+        }
+
     </script>
 {% endblock %}
 
@@ -156,6 +175,7 @@ Temperatures
     <style>
 
         .info_container {
+            margin-top: 30px;
             margin-right: 20px;
             margin-left: 20px;
             float: left;
@@ -182,6 +202,11 @@ Temperatures
         td h3 {
             margin: 0 0 10px;
             vertical-align: bottom;
+        }
+
+        #chart {
+            padding-top: 100px;
+            clear: both;
         }
 
 
