--- a/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
@@ -1,13 +1,17 @@
 {% extends 'WebViewsBundle:Pages:base.html.twig' %}
 
+{% block links %}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+{% endblock %}
+
 {% block body %}
     <div id="info"></div>
-    <div id="chart"></div>
+    <div align="center" id="charts"></div>
     <script>
 
         // DOM vars
         var info_html = document.getElementById('info');
-        var chart_html = document.getElementById('chart');
+        var charts_html = document.getElementById('charts');
 
         // For relevance verification
         var current_info;
@@ -65,7 +69,7 @@
                         chart_bt.onclick =      showChart;
 
                         var name_text =         document.createTextNode(controller);
-                        var chart_bt_text =     document.createTextNode('Show chart');
+                        var chart_bt_text =     document.createTextNode('Show charts');
 
                         name_container.appendChild(name_text);
                         chart_bt.appendChild(chart_bt_text);
@@ -152,15 +156,39 @@
 
         // Okay. Charts. Let's start!
 
-
         function showChart() {
+            charts_html.innerHTML = "";
+            var controller = this.id;
             var request = new XMLHttpRequest();
             request.onreadystatechange = function() {
                 if(request.readyState == 4 && request.status == 200) {
-                    console.log(request.responseText);
+
+                    var data = JSON.parse(request.responseText);
+
+
+
+                    // Get and filer types
+
+                    var values = [];
+                    for (var row_index in data) {
+                        if (!(data[row_index]['value_type'] in values)) {
+                            values[data[row_index]['value_type']] = [];
+                        }
+                        var pare = [' ', parseFloat(data[row_index]['value'])];
+                        values[data[row_index]['value_type']].push(pare);
+                    }
+
+
+
+                    for (var type in values) {
+
+                        // Chart maker needed. lol
+
+                    }
+
                 }
             };
-            request.open('GET', '/api/temperatures/controller/'+this.id);
+            request.open('GET', '/api/temperatures/controller/'+controller);
             request.send();
         }
 
@@ -204,7 +232,7 @@ Temperatures
             vertical-align: bottom;
         }
 
-        #chart {
+        #charts{
             padding-top: 100px;
             clear: both;
         }
