--- a/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
@@ -2,16 +2,19 @@
 
 {% block links %}
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{{ asset('Chart.js') }}"></script>
 {% endblock %}
 
 {% block body %}
     <div id="info"></div>
-    <div align="center" id="charts"></div>
+    <div id="chart_container" align="center">
+        <canvas id="chart"></canvas>
+    </div>
     <script>
 
         // DOM vars
         var info_html = document.getElementById('info');
-        var charts_html = document.getElementById('charts');
+        var chart_html = document.getElementById('chart');
 
         // For relevance verification
         var current_info;
@@ -157,7 +160,7 @@
         // Okay. Charts. Let's start!
 
         function showChart() {
-            charts_html.innerHTML = "";
+            chart_html.innerHTML = "";
             var controller = this.id;
             var request = new XMLHttpRequest();
             request.onreadystatechange = function() {
@@ -166,25 +169,49 @@
                     var data = JSON.parse(request.responseText);
 
 
+                    // Chart
+                    var ctx = document.getElementById("chart");
 
-                    // Get and filer types
 
-                    var values = [];
-                    for (var row_index in data) {
-                        if (!(data[row_index]['value_type'] in values)) {
-                            values[data[row_index]['value_type']] = [];
+                    data = {
+                        labels: ["January", "February", "March", "April", "May", "June", "July"],
+                        datasets: [
+                            {
+                                label: "My First dataset",
+                                fill: false,
+                                lineTension: 0.1,
+                                backgroundColor: "rgba(75,192,192,0.4)",
+                                borderColor: "rgba(75,192,192,1)",
+                                borderCapStyle: 'butt',
+                                borderDash: [],
+                                borderDashOffset: 0.0,
+                                borderJoinStyle: 'miter',
+                                pointBorderColor: "rgba(75,192,192,1)",
+                                pointBackgroundColor: "#fff",
+                                pointBorderWidth: 1,
+                                pointHoverRadius: 5,
+                                pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                                pointHoverBorderColor: "rgba(220,220,220,1)",
+                                pointHoverBorderWidth: 2,
+                                pointRadius: 1,
+                                pointHitRadius: 10,
+                                data: [65, 59, 80, 81, 56, 55, 40],
+                            }
+                        ]
+                    };
+
+                    var myLineChart = new Chart(ctx, {
+                        type: 'line',
+                        data: data,
+                        responsive: true,
+                        maintainAspectRatio: true,
+                        options: {
+                            xAxes: [{
+                                display: false
+                            }]
                         }
-                        var pare = [' ', parseFloat(data[row_index]['value'])];
-                        values[data[row_index]['value_type']].push(pare);
-                    }
-
-
-
-                    for (var type in values) {
-
-                        // Chart maker needed. lol
-
-                    }
+                    });
+                    
 
                 }
             };
@@ -232,9 +259,13 @@ Temperatures
             vertical-align: bottom;
         }
 
-        #charts{
+        #chart {
             padding-top: 100px;
-            clear: both;
+        }
+
+        #chart_container{
+            margin: 0 auto;
+            width: 70%;
         }
 
 
