Login/pass DB. Removed margin. Deleted old charts

--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
         <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -13,7 +12,7 @@
         <title>{% block title %}Home Control{% endblock %}</title>
         <style>
             body {
-	            margin:8px;
+	            margin:0px;
 	            padding:0;
 	            background:#fff;
 	            font-family:'Open Sans', sans-serif;
@@ -244,7 +243,7 @@
                     Designed by Yurii Zinets and Anton Gladyr
                 </p>
 	        </div>
-        </div> >
+        </div>
 	    {% block body %}{% endblock %}
         <script>
             $(document).ready(function(){
