--- a/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
@@ -160,68 +160,7 @@
         // Okay. Charts. Let's start!
 
         function showChart() {
-            chart_html.innerHTML = "";
-            var controller = this.id;
-            var request = new XMLHttpRequest();
-            request.onreadystatechange = function() {
-                if(request.readyState == 4 && request.status == 200) {
-
-                    var data = JSON.parse(request.responseText);
-
-
-                    // Chart
-                    var ctx = document.getElementById("chart");
-
-
-                    data = {
-                        labels: ["January", "February", "March", "April", "May", "June", "July"],
-                        datasets: [
-                            {
-                                label: "My First dataset",
-                                fill: false,
-                                lineTension: 0.1,
-                                backgroundColor: "rgba(75,192,192,0.4)",
-                                borderColor: "rgba(75,192,192,1)",
-                                borderCapStyle: 'butt',
-                                borderDash: [],
-                                borderDashOffset: 0.0,
-                                borderJoinStyle: 'miter',
-                                pointBorderColor: "rgba(75,192,192,1)",
-                                pointBackgroundColor: "#fff",
-                                pointBorderWidth: 1,
-                                pointHoverRadius: 5,
-                                pointHoverBackgroundColor: "rgba(75,192,192,1)",
-                                pointHoverBorderColor: "rgba(220,220,220,1)",
-                                pointHoverBorderWidth: 2,
-                                pointRadius: 1,
-                                pointHitRadius: 10,
-                                data: [65, 59, 80, 81, 56, 55, 40],
-                            }
-                        ]
-                    };
-
-                    var myLineChart = new Chart(ctx, {
-                        type: 'line',
-                        data: data,
-                        responsive: true,
-                        maintainAspectRatio: true,
-                        options: {
-                            xAxes: [{
-                                display: false
-                            }]
-                        }
-                    });
-
-                    $("#chart_container").fadeIn();
-                    $('html,body').animate({
-                        scrollTop: $("#chart").offset().top+15
-                    });
-                    
-
-                }
-            };
-            request.open('GET', '/api/temperatures/controller/'+controller);
-            request.send();
+            // Just think about it
         }
 
     </script>
