Started remaking frontend with bootstrap. Added some methods to DB/API

--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -38,6 +38,7 @@
 	            background:none;
             }
             nav p {
+				padding-top: 15px;
                 font-size: 20px;
             }
 
