--- a/web/css/sidebar.css
+++ b/web/css/sidebar.css
@@ -31,12 +31,12 @@
 
 #block-wrapper {
     width: 100%;
-    position: absolute;
+    position: fixed;
     padding: 15px;
 }
 
 #wrapper.toggled #block-wrapper {
-    position: absolute;
+    position: fixed;
     margin-right: -250px;
 }
 
