--- a/src/WebViewsBundle/Resources/views/NewPages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/NewPages/base.html.twig
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
 
+        <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
         <link href="{{ asset('css/sidebar.css') }}" rel="stylesheet" media="screen">
 
         {% block links %}
@@ -23,13 +24,13 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
                     <a href="#">All info</a>
                 </li>
                 <li>
-                    <a href="#">Temperatures</a>
+                    <a href="/info/temperatures">Temperatures</a>
                 </li>
                 <li>
                     <a href="#">Power</a>
@@ -51,9 +52,16 @@
 
 
         <script>
+
             function toggleMenu() {
                 $("#wrapper").toggleClass("toggled");
             }
+
+            // Smooth content appear
+            $(document).ready(function() {
+                $("#block-wrapper").fadeIn();
+            });
+
         </script>
 
 
