--- a/src/WebViewsBundle/Resources/views/Pages/home.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/home.html.twig
@@ -1,137 +1,5 @@
 {% extends 'WebViewsBundle:Pages:base.html.twig' %}
 
-{% block body %}
-<div class="circle">
-	<div class="sector1"></div>
-	<div class="sector2"></div>
-	<div class="round-middle"></div>
-</div>
-<div class="btn_wrap">
-	<button class="btn current" data-speed="paused">0</button>
-	<button class="btn" data-speed="2100ms">1</button>
-	<button class="btn" data-speed="1400ms">2</button>
-	<button class="btn" data-speed="700ms">3</button>
-</div>
+{% block content %}
 
-<script>
-$( function() {
-	$("button").on('click', function() {
-		$("button").removeClass("current");
-		$(this).addClass("current");
-
-		var speed = $(this).data("speed");
-
-		if(speed === "paused") {
-			$(".circle").css("animation-play-state", "paused");
-		} else {
-			$(".circle").css({ 
-				animationPlayState: "running",
-				animationDuration: speed
-			});
-		}
-	});
-});
-</script>
 {% endblock %}
-
-{% block menu_title %}
-Home
-{% endblock %}
-
-{% block stylesheets %}
-<style>
-.circle {
-	margin-left: 25px;
-	position:relative;
-	display:inline-block;
-	width:300px;
-	height:300px;
-	border-radius:50%;
-	overflow:hidden;
-	animation-name: spin;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;
-}
-
-@keyframes spin {
-	from {
-		transform:rotate(0deg);
-	}
-	to {
-		transform:rotate(360deg);
-	}
-}
-
-.circle:before, .circle:after, .circle > div:before, .circle > div:after {
-	content:'';
-	position:absolute;
-	z-index:-1;
-}
-.circle:before {
-	bottom:50%;
-	left:50%;
-	margin-left:5px;
-	margin-bottom:4px;
-	border-top: 300px solid transparent;
-	border-right:150px solid brown;
-}
-.circle:after{
-	top:50%;
-	left:50%;
-	margin-left:5px;
-	margin-top:4px;
-	border-left:300px solid brown;
-	border-top:150px solid transparent;
-}
-.sector1:before {
-	bottom:50%;
-	right:50%;
-	margin-right:5px;
-	margin-bottom:4px;
-	border-bottom: 150px solid transparent;
-	border-right:300px solid brown;
-}
-
-.sector2:before {
-	top:50%;
-	right:50%;
-	margin-right:5px;
-	margin-top:4px;
-	border-bottom:300px solid transparent;
-	border-left:150px solid brown;
-}
-.round-middle{
-	position:absolute;
-	top:121px; left:121px;
-	width:50px; height:50px;
-	border:4px solid #fff;
-	border-radius:50%;
-	background:green;
-}
-
-.btn_wrap {
-	margin-top: 50px;
-	margin-left: 50px;   
-} 
-
-.btn {
-	display: inline-block;
-	margin-right: 20px;
-	text-align: center;
-	width: 50px;
-	height: 50px;
-	background: black;
-	-webkit-border-radius: 28;
-	-moz-border-radius: 28;
-	border-radius: 50%;
-	color: #ffffff;
-	font-size: 30px;
-	text-decoration: none;
-}
-.current {
-	background: red;
-} 
-</style>
-{% endblock %}
-
-
