--- a/src/WebViewsBundle/Resources/views/Pages/water.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/water.html.twig
@@ -1,15 +1,5 @@
 {% extends 'WebViewsBundle:Pages:base.html.twig' %}
 
-{% block body %}
-    <p>Not implemented</p>
-{% endblock %}
+{% block content %}
 
-{% block menu_title %}
-Water
-{% endblock %}
-
-{% block stylesheets %}
-    <style>
-
-    </style>
 {% endblock %}
