--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -3,261 +3,81 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
-        <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet">
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-		{% block links %}
-		{% endblock %}
-        <title>{% block title %}Home Control{% endblock %}</title>
-        <style>
-            body {
-	            margin:0px;
-	            padding:0;
-	            background:#fff;
-	            font-family:'Open Sans', sans-serif;
-	            font-size:12px;
-	            display: block;
-            }
-            ul {
-	            margin:0;
-	            padding:0;
-	            text-decoration:none;
-	            list-style:none;
-            }
-            li {
-	            padding:0;
-	            margin:0;
-            }
-            nav {
-	            text-align:center;
-	            width:100%;
-	            position:relative;
-	            height:auto;
-	            overflow:hidden;
-	            background:none;
-            }
-            nav p {
-				padding-top: 15px;
-                font-size: 20px;
+
+        <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+        <link href="{{ asset('css/sidebar.css') }}" rel="stylesheet" media="screen">
+
+        {% block links %}
+        {% endblock %}
+
+
+    </head>
+
+    <body>
+
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="info">All info</a>
+                </li>
+                <li>
+                    <a href="/info/temperatures">Temperatures</a>
+                </li>
+                <li>
+                    <a href="/info/power">Power</a>
+                </li>
+                <li>
+                    <a href="/info/water">Water</a>
+                </li>
+                <li>
+                    <a href="/controls">Controls</a>
+                </li>
+                <li>
+                    <a href="#">Errors</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+
+
+
+        <script>
+
+            function toggleMenu() {
+                $("#wrapper").toggleClass("toggled");
             }
 
-            /*styling open close button*/
-            .button {
-	            display:inline;
-	            position:absolute;
-	            right:50px;
-	            top:6px;
-	            z-index:999;
-	            font-size:30px;
-            }
-            .button a {
-	            text-decoration:none;
-            }
-            .btn-open:after {
-	            color:#333;
-	            content:"\f0c9";
-				font-size:21px;
-	            font-family:"FontAwesome";
-	            transition-property:all .1s linear 0s;
-	            -moz-transition:all .1s linear 0s;
-	            -webkit-transition:all .1s linear 0s;
-	            -o-transition:all .1s linear 0s;
-            }
-            .btn-open:hover:after {
-	            color:#34B484;
-            }
-            .btn-close:after {
-	            color:#fff;
-	            content:"\f00d";
-                
-                font-size:21px;
-	            font-family:"FontAwesome";
-	            transition-property:all .1s linear 0s;
-	            -moz-transition:all .1s linear 0s;
-	            -webkit-transition:all .1s linear 0s;
-	            -o-transition:all .1s linear 0s;
-            }
-            .btn-close:hover:after {
-	            color: #34B484;
-            }
-            /*overlay*/
-            .overlay {
-	            display:none;
-	            position:fixed;
-	            top:0;
-	            height:100%;
-	            width:100%;
-	            background:#333;
-	            overflow:auto;
-	            z-index:99;
-            }
-            .wrap {
-	            color:#e9e9e9;
-	            text-align:center;
-	            max-width:90%;
-	            margin:0 auto;
-            }
-            .wrap ul.wrap-nav {
-	            border-bottom:1px solid #575757;
-	            text-transform:capitalize;
-	            padding:150px 0px 100px;
-            }
-            .wrap ul.wrap-nav li {
-	            font-size:26px;
-	            display:inline-block;
-	            vertical-align:top;
-	            width:24%;
-	            position:relative;
-            }
-            .wrap ul.wrap-nav li a {
-	            color:#34B484;
-	            display:block;
-	            padding:8px 0;
-	            text-decoration:none;
-	            transition-property:all .2s linear 0s;
-	            -moz-transition:all .2s linear 0s;
-	            -webkit-transition:all .2s linear 0s;
-	            -o-transition:all .2s linear 0s;
-            }
-            .wrap ul.wrap-nav li a:hover {
-	            color:#f0f0f0;
-            }
-            .wrap ul.wrap-nav ul {
-	            padding:20px 0;
-            }
-            .wrap ul.wrap-nav ul li {
-	            display:block;
-	            font-size:18px;
-	            width:100%;
-	            color:#e9e9e9;
-            }
-            .wrap ul.wrap-nav ul li a {
-	            color:#f0f0f0;
-            }
-            .wrap ul.wrap-nav ul li a:hover {
-	            color:#34B484;
-            }
-            .social {
-	            font-size:25px;
-	            padding:20px;
-            }
-            .social p {
-	            margin:0;
-	            padding:20px 0 5px 0;
-	            line-height:30px;
-	            font-size:13px;
-            }
-            .social p a {
-	            color:#34B484;
-	            text-decoration:none;
-	            margin:0;
-	            padding:0;
-            }
-            .social-icon {
-	            width:80px;
-	            height:50px;
-	            background:#e9e9e9;
-	            color:#333;
-	            display:inline-block;
-	            margin:0 20px;
-	            transition-property:all .2s linear 0s;
-	            -moz-transition:all .2s linear 0s;
-	            -webkit-transition:all .2s linear 0s;
-	            -o-transition:all .2s linear 0s;
-            }
-            .social-icon:hover {
-	            background:#34B484;
-	            color:#f0f0f0;
-            }
-            .social-icon i {
-	            margin-top:12px;
-            }
-            @media screen and (max-width:48em) {
-	            .wrap ul.wrap-nav>li {
-		            width:100%;
-		            padding:20px 0;
-		            border-bottom:1px solid #575757;
-	            }
-	            .wrap ul.wrap-nav {
-		            padding:30px 0px 0px;
-	            }
-	            nav ul {
-		            opacity:0;
-		            visibility:hidden;
-	            }
-	            .social {
-		            color:#c1c1c1;
-		            font-size:25px;
-		            padding:15px 0;
-	            }
-	            .social-icon {
-		            width:100%;
-		            height:50px;
-		            background:#fff;
-		            color:#333;
-		            display:block;
-		            margin:5px 0;
-	            }
-            }
-            .content {
-	            width:100%;
-	            margin-top:1px;
-	            font-size:20px;
-	            color:#333;
-	            text-align: center;
-            }
-        </style>
-        {% block stylesheets %}
-        {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        <nav>
-            <p>{% block menu_title %} {% endblock %}</p>
-            <div class="button">
-	            <a class="btn-open" href="#"></a>
-            </div>
-        </nav>
-        <div class="overlay">
-	        <div class="wrap">
-		        <ul class="wrap-nav">
-					<li><a href="/">Home</a>
-						<ul>
-						</ul>
-					</li>
-                    <li><a href="/info">Info</a>
-						<ul>
-							<li><a href="/info/power">Power</a></li>
-							<li><a href="/info/temperatures">Temperature</a></li>
-                            <li><a href="/info/water">Water</a></li>
-						</ul>
-					</li>
-                    <li><a href="/controls">Controls</a>
-                        <ul>
-                        </ul>
-                    </li>
-					
-                    <br><br><br><br><br><br><br><br><br><br>
-                </ul>
-                <p>
-                    Designed by Yurii Zinets and Anton Gladyr
-                </p>
-	        </div>
-        </div>
-	    {% block body %}{% endblock %}
-        <script>
-            $(document).ready(function(){
-                $(".button a").click(function(){
-                    $(".overlay").fadeToggle(200);
-                    $(this).toggleClass('btn-open').toggleClass('btn-close');
-                });
+            // Smooth content appear
+            $(document).ready(function() {
+                $("#block-wrapper").fadeIn();
             });
-            $('.overlay').on('click', function(){
-                $(".overlay").fadeToggle(200);   
-                $(".button a").toggleClass('btn-open').toggleClass('btn-close');
-                open = false;
-            });
+
         </script>
+
+
+        <div id="block-wrapper">
+            <button class="toggle-button" onclick="toggleMenu()"></button>
+            <div id="page-content-wrapper">
+
+                {% block content %}
+                {% endblock %}
+
+            </div>
+        </div>
+
+    </div>
+
     </body>
+
+
 </html>
