--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -27,7 +27,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="info">All info</a>
+                    <a href="/info">All info</a>
                 </li>
                 <li>
                     <a href="/info/temperatures">Temperatures</a>
