Fixed id names and realtime update

--- a/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
@@ -21,7 +21,7 @@
                         {% for value_type, value in value_types %}
                             <tr>
                                 <td> {{ value_type }} </td>
-                                <td id= "{{ value_type }}" > {{ value }}°C</td>
+                                <td id= "{{ controller }}:{{ value_type }}" > {{ value }}°C</td>
                             </tr>
                         {% endfor %}
 
