Started making various charts

--- a/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/temperatures.html.twig
@@ -37,6 +37,9 @@
     <div class="container-fluid" id="summary-wrapper">
         <div class="row">
             <div class="col-md-6">
+                    <button onclick="showSevenDaysChart()">7 days</button>
+                    <button onclick="showDayChart()">1 day</button>
+                    <button onclick="showHourChart()">1 hour</button>
                     <canvas id="chart" width="400" height="250"></canvas>
             </div>
             <div class="col-md-6" id="summary">
