--- a/src/WebViewsBundle/Resources/views/Pages/signin.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/signin.html.twig
@@ -38,10 +38,14 @@
 
 	<div class="container">
 
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+
 	      <form class="form-signin">
 	        <h2 class="form-signin-heading">Please sign in</h2>
 	        <label for="inputEmail" class="sr-only">Email address</label>
-	        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+	        <input type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
 	        <label for="inputPassword" class="sr-only">Password</label>
 	        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 	        <div class="checkbox">
