--- a/src/WebViewsBundle/Resources/views/Pages/signin.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/signin.html.twig
@@ -14,7 +14,7 @@
     <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    
+
 
     <!-- Custom styles for this template -->
     <link href="{{ asset('css/signin.css') }}" rel="stylesheet" media="screen">
@@ -28,7 +28,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	{% block links %}
-		
+
 	{% endblock %}
 
   </head>
@@ -38,22 +38,21 @@
 
 	<div class="container">
 
-        {% if error %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
-
-	      <form class="form-signin">
+	      <form action="{{ path('login_check') }}" class="form-signin" method="post">
 	        <h2 class="form-signin-heading">Please sign in</h2>
 	        <label for="inputEmail" class="sr-only">Email address</label>
-	        <input type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
+	        <input type="text" id="username" name="_username" class="form-control" placeholder="Email address" required autofocus>
 	        <label for="inputPassword" class="sr-only">Password</label>
-	        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+	        <input type="password" id="password" name="_password" class="form-control" placeholder="Password" required>
 	        <div class="checkbox">
 	          <label>
 	            <input type="checkbox" value="remember-me"> Remember me
 	          </label>
 	        </div>
 	        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+              {% if error %}
+                  <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+              {% endif %}
 	      </form>
 
 	    </div> <!-- /container -->
