Some renames, started menu change

--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -27,19 +27,13 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/info">All info</a>
+                    <a href="/air">Air</a>
                 </li>
                 <li>
-                    <a href="/info/temperatures">Temperatures</a>
+                    <a href="/power">Power</a>
                 </li>
                 <li>
-                    <a href="/info/power">Power</a>
-                </li>
-                <li>
-                    <a href="/info/water">Water</a>
-                </li>
-                <li>
-                    <a href="/controls">Controls</a>
+                    <a href="/water">Water</a>
                 </li>
                 <li>
                     <a href="#">Errors</a>
