--- a/src/WebViewsBundle/Resources/views/Pages/login.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/login.html.twig
@@ -17,7 +17,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="{{ asset('css/signin.css') }}" rel="stylesheet" media="screen">
+    <link href="{{ asset('css/login.css') }}" rel="stylesheet" media="screen">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
