--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -38,6 +38,9 @@
                 <li>
                     <a href="#">Errors</a>
                 </li>
+                <li>
+                    <a href="/logout">Logout</a>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
