--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -9,6 +10,11 @@
 
         <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
         <link href="{{ asset('css/sidebar.css') }}" rel="stylesheet" media="screen">
+
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
         {% block links %}
         {% endblock %}
@@ -36,7 +42,10 @@
                     <a href="/water">Water</a>
                 </li>
                 <li>
-                    <a href="#">Errors</a>
+                    <a href="/logs">Commands log</a>
+                </li>
+                <li>
+                    <a href="#">Controller error log</a>
                 </li>
                 <li>
                     <a href="/logout">Logout</a>
