--- a/web/css/air.css
+++ b/web/css/air.css
@@ -3,7 +3,11 @@
     float: left
 }
 
-@media (max-width: 640px) {
+.h2 {
+
+}
+
+@media (max-width: 768px) {
     .column {
         width: 100%;
     }
