Websocket improvement. Air view data update via websocket

--- a/src/WebViewsBundle/Resources/views/Pages/air.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/air.html.twig
@@ -9,17 +9,19 @@
 {% block content %}
 
 
-        <div class="column">
-            <h2 align="center">Controllers info</h2>
+    <div class="row-fluid">
+        <div class="col-md-4">
+            <h3>Controllers info</h3>
+            <div id="controllers-info"></div>
         </div>
-
-        <div class="column">
-            <h2 align="center">Values</h2>
+        <div class="col-md-4">
+            <h3>Values</h3>
+            <div id="values"></div>
         </div>
-
-        <div class="column">
-            <h2 align="center">Controls</h2>
+        <div class="col-md-4">
+            <h3>Controls</h3>
         </div>
+    </div>
 
 
 {% endblock %}
