--- a/src/WebViewsBundle/Resources/views/Pages/air.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/air.html.twig
@@ -20,6 +20,7 @@
         </div>
         <div class="col-md-4">
             <h3>Controls</h3>
+            <div id="controls"></div>
         </div>
     </div>
 
