--- a/src/WebViewsBundle/Resources/views/Pages/base.html.twig
+++ b/src/WebViewsBundle/Resources/views/Pages/base.html.twig
@@ -9,6 +9,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
 
         <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+        <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
         <link href="{{ asset('css/sidebar.css') }}" rel="stylesheet" media="screen">
 
         <!--[if lt IE 9]>
